--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="p5.sound.js"></script>
     <script src="sketch.js"></script>
     <script src="Energy.js"></script>
+    <script src="Poison.js"></script>
     <script src="Cell.js"></script>
     <script src="utilitario.js"></script>
   </head>
